--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -81,7 +81,7 @@ a {
 
 /* --- BOTAO --- */
   
-.header-botao{
+.header-button{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -170,7 +170,33 @@ padding-bottom: 10px;
 }
 
 /* AUTORA */
+.autora{
+    background-color: #b6dbf1d2;
+    align-items: center;
+    width: 100%;
+    height: 600px;
+    margin-top: 60px;
+    padding: 60px;
+}
 
+.autora-titulo{
+    text-align: center;
+    color: #ea4c89;
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    padding: 30px;
+}
+
+.autora-sobre{
+    display: flex;
+}
+
+.autora-imagem{
+    width: 20%;
+    border-radius: 50%;
+    margin-right: 35px;
+}
 
 
 /* SECAO Recado */
@@ -178,8 +204,50 @@ padding-bottom: 10px;
 
 
 /* FOOTER */
+.footer{
+    background: #ea4c89;
+    color:#f3f3f3;
 
+}
+
+.footer-menu{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    margin: 10px 60px;
+    font-size: 1.4rem;
+    padding: 30px;
+}
+
+.footer-links{
+    display: block;
+    text-align: center;
+    list-style: none;
+}
+
+.footer-cc{
+background: #5b5e5e;
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 20px;
+
+}
 
 /* MEDIA QUERY */
+@media (min-width:768px){
+    .container-header{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 
+    .header-maravilhosa-img{
+        width: 100%;
+        height: 350px;
+        margin-bottom: 180px;
+        margin-left: 8px;
+    }
+}
 
