--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -15,7 +15,7 @@ a {
 /* NAVBAR */
 
 .navbar{
-    background-color: #C083B9;
+    background-color: #c0a883;
     width: 100%;
     height: 85px;
 }
@@ -31,13 +31,13 @@ a {
 /* HEADER */
 
 .header{
-   background-image: url("./img/backgroud_header_01.jpg");
+   background-image: url("./img/backgroud-header.jpg");
    background-size:cover;
     background-repeat: no-repeat;
     min-width:80vh;
     width: 100%;
     height: 500px;
-    color: #ffffff;
+    color: #bba687;
 }
 
 .container-header{
@@ -48,7 +48,8 @@ a {
     flex-direction: column;
 }
 
-.header_maravilhosa_img {
+.header-maravilhosa-img {
+    
     width: 100%;
     height: 220px;
     margin-left: 20px;
@@ -87,7 +88,7 @@ a {
     justify-content: center;
     width: 150px;
     height: 40px;
-    background: #7F479B;
+    background: #ac8852;
     border-radius: 5px;
     color: #ffffff;
     text-decoration: none;
@@ -99,7 +100,7 @@ a {
 }
 
 .header_button:hover {
-    background-color: #2e1842;
+    background-color: #bba687;
     color: #ffffff;
     transition: background-color .5s;
 }
@@ -110,7 +111,7 @@ a {
 
 /* SECAO Maravilhosa */
 .maravilhosa{
-    background-color: #fad8e5;
+    background-color: #965a32d7;
     align-items: center;
     width: 100%;
     height: 100%;
@@ -123,7 +124,7 @@ a {
 }
 
 .maravilhosa-titulo{
-    color: #ea4c89;
+    color: #5c4027;
     font-size: 40px;
     text-align: center;
     font-weight: bold;
@@ -131,14 +132,14 @@ a {
 }
 
 .maravilhosa-boxBorder{
-    border: 1px solid #674562;
+    border: 1px solid #302315;
     margin: 42px;
 
 }
 
 .boxBorder-texto{
     margin: 30px;
-    color: #462755;
+    color: #000000;
     text-align: center;
 }
 
@@ -160,7 +161,7 @@ a {
 }
 
 .suaHistoria-titulo{
-    color: #462755;
+    color: #3b1d0d;
     padding-bottom: 10px;
 }
 
@@ -171,7 +172,7 @@ padding-bottom: 10px;
 
 /* AUTORA */
 .autora{
-    background-color: #b6dbf1d2;
+    background-color: #916446d7;
     align-items: center;
     width: 100%;
     height: 600px;
@@ -181,7 +182,7 @@ padding-bottom: 10px;
 
 .autora-titulo{
     text-align: center;
-    color: #ea4c89;
+    color: #492b16d7;
     font-size: 32px;
     font-weight: bold;
     letter-spacing: 1px;
@@ -205,7 +206,7 @@ padding-bottom: 10px;
 
 /* FOOTER */
 .footer{
-    background: #ea4c89;
+    background: #6e5530;
     color:#f3f3f3;
 
 }
@@ -227,7 +228,7 @@ padding-bottom: 10px;
 }
 
 .footer-cc{
-background: #5b5e5e;
+background: #4e3725;
 display: flex;
 align-items: center;
 justify-content: center;
