--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -48,20 +48,13 @@ a {
     flex-direction: column;
 }
 
-.header-maravilhosa-img {
-    
-    width: 100%;
-    height: 220px;
-    margin-left: 20px;
-    margin-top: 50px;
-}
-/*.header-container-img{
+/* .header_container_img{
     width: 500px;
-    height: 380px;
+    height: 300px;
     position: absolute;
     top: 30%;
-    left: 40%;}*/
-
+    left: 40%;
+}  */
 
 .header-maravilhosa-img{
     width: 90%;
@@ -78,6 +71,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-transform: uppercase;
 }
 
 /* --- BOTAO --- */
@@ -99,10 +93,10 @@ a {
     margin-top: 40px;
 }
 
-.header_button:hover {
+.header-button:hover {
     background-color: #bba687;
     color: #ffffff;
-    transition: background-color .5s;
+    transition: backgrond-color .5s;
 }
 
 /*********** HEADER   *********/
@@ -178,6 +172,8 @@ padding-bottom: 10px;
     height: 600px;
     margin-top: 60px;
     padding: 60px;
+    display: flex;
+    flex-direction: column;
 }
 
 .autora-titulo{
@@ -228,12 +224,11 @@ padding-bottom: 10px;
 }
 
 .footer-cc{
-background: #4e3725;
-display: flex;
-align-items: center;
-justify-content: center;
-padding: 20px;
-
+    background: #4e3725;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 /* MEDIA QUERY */
@@ -241,14 +236,36 @@ padding: 20px;
     .container-header{
         display: flex;
         flex-direction: row;
+        justify-content: space-around;
         align-items: center;
     }
 
     .header-maravilhosa-img{
         width: 100%;
-        height: 350px;
+        height: 380px;
         margin-bottom: 180px;
         margin-left: 8px;
     }
+
+    .header-titulo{
+        width: 30%;
+        margin: 45px 0px 120px 70px;
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .suaHistoria-imagem{
+        width: 40%;
+
+    }
+
+    .container-suaHistoria{
+       
+        flex-direction: row;
+        justify-content:space-between;
+    }
+        .autora{
+            flex-direction: column;
+        }
 }
 
