--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -34,14 +34,14 @@ a {
    background-image: url("./img/backgroud-header.jpg");
    background-size:cover;
     background-repeat: no-repeat;
-    min-width:80vh;
+    min-height:80vh;
     width: 100%;
     height: 500px;
     color: #bba687;
 }
 
 .container-header{
-    width: 100%;
+    
     height:100%;
     display: flex;
     padding: 30px;
